<resources>
    <string name="app_name">ContinentExplorer</string>
    <string name="welcome_message">Welcome To Continent Explorer</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="back">Back</string>
    <string name="welcome_back">Welcome back to Continent Explorer!</string>
    <string name="login_to_account">Log in to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="dont_have_account">Don\'t you have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="profile_image">Profile Image</string>

</resources>