<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageViewBack"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/welcome_back"
        android:textColor="@color/grey_text"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBack"
        android:layout_marginStart="24dp"/>

    <TextView
        android:id="@+id/textViewSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login_to_account"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        android:layout_marginStart="24dp"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/email"
        android:padding="12dp"
        android:textColor="@color/text_shadow"
        android:textSize="14sp"
        android:fontFamily="@font/inter_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSubtitle"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/text_shadow"
        android:textSize="14sp"
        android:fontFamily="@font/inter_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>


    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_password"
        android:textColor="@color/text_shadow"
        android:textStyle="normal"
        android:textSize="10sp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintStart_toStartOf="@id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_social_login"
        android:text="@string/login"
        android:textSize="12sp"
        android:radius="9dp"
        android:textAllCaps="false"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewForgotPassword"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>


    <TextView
        android:id="@+id/textViewDontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="100dp"
        android:text="@string/dont_have_account"
        android:textColor="@color/grey_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin" />


    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/sign_up"
        android:textColor="@color/text_selector"
        android:background="@drawable/text_background"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toEndOf="@id/textViewDontHaveAccount"
        app:layout_constraintTop_toTopOf="@id/textViewDontHaveAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>
