<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="0dp"
        android:layout_height="260dp"
        android:scaleType="centerCrop"
        android:src="@drawable/intro"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_message"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/grey_text2"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewSubWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="Learn countries, explore continents, and test your geography skills with our easy-to-use mobile app."
        android:textSize="16sp"
        android:textColor="@color/grey_text3"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/textViewWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textSize="14sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:background="@drawable/button_login"
        android:textColor="@color/grey_text"
        style="@style/ButtonLogin"
        app:layout_constraintTop_toBottomOf="@id/textViewSubWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:background="@drawable/button_login"
        android:textColor="@color/grey_text"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>